# yolov5

./: CMakeLists.txt  inference.cpp  inference_cpp.cpp  requirements.txt
script/: generate_sets.py  symlink.py
yolov5_openvino/: yolov5s.mapping  yolov5s.xml  yolov5s.yaml
